    - FileHandler can now be instantiated for reading of a single File in SystemController
    - for writing 1 FileHandler Instance per BeBoard is created
    - file Headers are now included in all raw files and are marked with the BeId
    - moved all HW Parsing features from System Controller to System/FileParser class for easier extension
- 31.08.2016: most likely v1-40 
    - updated Event Class with more streamlined and efficient code that uses less accesses when dealing with Events - should make for better performance
    - updated DQM histogramer to work with new Event implementation
    - revised mapping of Events vs CBC and FE
    - merged most recent AMC13 code from Pixel Phase 1 developments
- 24.10.2016: added easylogging++ class for convenient log file creation and different logging levels
- 28.10.2016: merged recent changes for HybridTesting (integratedtester)
    - new binary: integratedtester
    - support for exernal USB instruments (HMP4040, Ke2110, TCP sockets via ZEROMQ)
- 31.10.2016: changed makefiles to use environment variables exported in setup.sh
- 15.11.2016: adding modifications for CBC3 usage:
    - new Cbc3Fc7FWInterface and address tabel
    - FileParser in System/ can now handle nested BeBoardRegisters like in uHAL address tables in HWDescription.xml config files
    - new Cbc3 FW (K.Uchida) HWDescription file
    - re-structured Data handling in the guts: Data object is now member of the SystemController and all methods like getting events etc are wrapped in system controller
    - ReadData() and ReadNEvents() are now wrapped in SystemController and should thus only be used from there!
    - FWInterfaces: ReadData() and ReadNEvents() now take a reference to std::vector<uint32_t>& to pass the data upwards to the Data object in SystemController
    - re-structured the Data object internals: Data::Set() now decides the manipulation algorithm based on BoardType Enum class in Definition.h - no more set of boolean flags