@@ -96,8 +96,7 @@ int main ( int argc, char* argv[] )
     cHybridTester.CreateResultDirectory ( cDirectory );
     cHybridTester.InitResultFile ( "HybridTest" );
     cHybridTester.StartHttpServer();
-    cHybridTester.ConfigureHw (outp);
-    LOG (INFO) << outp.str();
+    cHybridTester.ConfigureHw ();
 
 
     // Here comes our Part:
