@@ -7,7 +7,7 @@ using namespace Ph2_HwDescription;
 using namespace Ph2_HwInterface;
 using namespace Ph2_System;
 using namespace CommandLineProcessing;
-INITIALIZE_EASYLOGGINGPP 
+INITIALIZE_EASYLOGGINGPP
 
 
 int main ( int argc, char** argv )
@@ -53,9 +53,8 @@ int main ( int argc, char** argv )
     LOG (INFO) << outp.str();
     outp.str ("");
 
-    if ( cConfigure ) cSystemController.ConfigureHw (outp);
+    if ( cConfigure ) cSystemController.ConfigureHw ();
 
-    LOG (INFO) << outp.str();
 
     //Timer t;
     //t.start();
