@@ -693,9 +693,7 @@ void HybridTester::TestRegisters()
     start_time = time (0);
     char* stop = ctime (&start_time);
     LOG (INFO) << "stop: " << stop ;
-    std::stringstream ss;
-    ConfigureHw (ss);
-    LOG (INFO) << ss.str();
+    ConfigureHw ();
 }
 
 void HybridTester::DisplayGroupsContent (std::array<std::vector<std::array<int, 5>>, 8> pShortedGroupsArray)
