@@ -39,7 +39,7 @@ typedef std::map<Cbc*, std::vector<Channel*> > ChannelMap;
 
 class PulseShape : public Tool
 {
-public:
+  public:
     /*!
     * \Initialize the istogram
     */
@@ -49,22 +49,22 @@ public:
     * \scan the Vcth with the correspondent delay
     * \param pDelay: initialize the hist whith the pDelay
     */
-    void ScanVcth( uint32_t pDelay );
+    void ScanVcth ( uint32_t pDelay );
 
     /*!
     * \Scan the test pulse delay
     * \param pStepSize: scan the test pulse delay with steps of : pStepSize
     */
-    void ScanTestPulseDelay( uint8_t pStepSize );
+    void ScanTestPulseDelay ( uint8_t pStepSize );
 
-private:
+  private:
 
     /*!
     * \brief find the channels of a test group
     * \param pTestGroup: the number of the test group
     * \return the channels in the pTestGroup
     */
-    std::vector<uint32_t> findChannelsInTestGroup( uint32_t pTestGroup );
+    std::vector<uint32_t> findChannelsInTestGroup ( uint32_t pTestGroup );
 
     /*!
     * \brief parse the xml settings
@@ -75,38 +75,38 @@ private:
     * \brief set the system test pulse
     * \param pTPAmplitude: the amplitude of the test pulse
     */
-    void setSystemTestPulse( uint8_t pTPAmplitude );
+    void setSystemTestPulse ( uint8_t pTPAmplitude );
 
     /*!
     * \brief update the Histogram
     * \param pHistName: the name of the Hist
     * \param pFinal: true if is the last updateHists to be done
     */
-    void updateHists( std::string pHistName, bool pFinal );
+    void updateHists ( std::string pHistName, bool pFinal );
 
-    uint32_t fillVcthHist( BeBoard* pBoard, Event* pEvent, uint32_t pVcth );
+    uint32_t fillVcthHist ( BeBoard* pBoard, Event* pEvent, uint32_t pVcth );
     /*!
     * \brief convert the delay before concat to the  test group number
     * \param pDelay: the actual dealy
     */
-    void setDelayAndTesGroup( uint32_t pDelay );
+    void setDelayAndTesGroup ( uint32_t pDelay );
 
     /*!
     * \brief enable the test group
     */
-    void toggleTestGroup(bool pEnable);
+    void toggleTestGroup (bool pEnable);
 
     /*!
     * \brief fit the graph with the fitting function
     */
-    void fitGraph( int pLow );
+    void fitGraph ( int pLow );
 
     /*!
     * \brief reverse the byte
     * \param n:the number to be reversed
     * \return the reversed number
     */
-    uint8_t reverse( uint8_t n )
+    uint8_t reverse ( uint8_t n )
     {
         // Reverse the top and bottom nibble then swap them.
         return ( fLookup[n & 0b1111] << 4 ) | fLookup[n >> 4];
@@ -118,11 +118,11 @@ private:
     * \param pGroup: the actual group number
     * \return the reversed endianness
     */
-    uint8_t to_reg( uint8_t pDelay, uint8_t pGroup )
+    uint8_t to_reg ( uint8_t pDelay, uint8_t pGroup )
     {
 
-        uint8_t cValue = ( ( reverse( pDelay ) ) & 0xF8 ) |
-                         ( ( reverse( pGroup ) ) >> 5 );
+        uint8_t cValue = ( ( reverse ( pDelay ) ) & 0xF8 ) |
+                         ( ( reverse ( pGroup ) ) >> 5 );
 
         //std::cout << std::bitset<8>( cValue ) << " cGroup " << +pGroup << " " << std::bitset<8>( pGroup ) << " pDelay " << +pDelay << " " << std::bitset<8>( pDelay ) << std::endl;
         return cValue;
@@ -136,7 +136,7 @@ private:
     uint8_t fVplus;/*!< Postamp  bias voltage */
     uint8_t fTestGroup; /*!< Number of the test group */
     uint8_t fTPAmplitude; /*!< Test pulse Amplitude */
-    uint32_t fDelayAfterPulse ; // Delay after test pulse 
+    uint32_t fDelayAfterPulse ; // Delay after test pulse
     uint32_t fChannel; /*!< channel number */
     uint8_t fOffset; /*!< Offset value for the channel */
     uint32_t fStepSize; /*!< Step size */
@@ -148,10 +148,11 @@ private:
         0x1, 0x9, 0x5, 0xd, 0x3, 0xb, 0x7, 0xf,
     }; /*!< Lookup table for reverce the endianness */
 
-    const std::string getDelAfterTPString(const std::string pBoardIdentifier){
-         
-        if (pBoardIdentifier == "GLIB" || pBoardIdentifier == "CTA") return "COMMISSIONNING_MODE_DELAY_AFTER_TEST_PULSE";
-        else if (pBoardIdentifier == "ICGLIB" || pBoardIdentifier == "ICFC7") return "cbc_daq_ctrl.commissioning_cycle.test_pulse_count";
+    const std::string getDelAfterTPString (BoardType pBoardType)
+    {
+
+        if (pBoardType == BoardType::GLIB || pBoardType == BoardType::CTA) return "COMMISSIONNING_MODE_DELAY_AFTER_TEST_PULSE";
+        else if (pBoardType == BoardType::ICGLIB || pBoardType == BoardType::ICFC7) return "cbc_daq_ctrl.commissioning_cycle.test_pulse_count";
         else return "not recognized";
     }
 
@@ -163,6 +164,6 @@ private:
 * \param par: array with the parameters of the fitting function
 * \return the point of the fitting function
 */
-double pulseshape( double* x, double* par );
+double pulseshape ( double* x, double* par );
 
 #endif
