@@ -354,14 +354,14 @@ void SCurve::setFWTestPulse()
     for (auto& cBoard : fBoardVector)
     {
         std::vector<std::pair<std::string, uint32_t> > cRegVec;
-        std::string cBoardType = cBoard->getBoardType();
+        BoardType cBoardType = cBoard->getBoardType();
 
-        if (cBoardType == "GLIB" || cBoardType == "CTA")
+        if (cBoardType == BoardType::GLIB || cBoardType == BoardType::CTA)
         {
             cRegVec.push_back ({"COMMISSIONNING_MODE_RQ", 1 });
             cRegVec.push_back ({"COMMISSIONNING_MODE_CBC_TEST_PULSE_VALID", 1 });
         }
-        else if (cBoardType == "ICGLIB" || cBoardType == "ICFC7")
+        else if (cBoardType == BoardType::ICGLIB || cBoardType == BoardType::ICFC7)
         {
             cRegVec.push_back ({"cbc_daq_ctrl.commissioning_cycle.mode_flags.enable", 1 });
             cRegVec.push_back ({"cbc_daq_ctrl.commissioning_cycle.mode_flags.test_pulse_enable", 1 });
